fixed the spacing of icons on work pages

--- a/frontend/src/app/pages/work-page/work-page.component.less
+++ b/frontend/src/app/pages/work-page/work-page.component.less
@@ -339,7 +339,7 @@ div.work-box {
                 i-feather {
                     stroke-width: 1;
                     position: relative;
-                    top: 0.45rem;
+                    top: 0.3rem;
                     width: 16px;
                     height: 16px;
                     margin-right: 0.25rem;
@@ -351,10 +351,6 @@ div.work-box {
                 font-size: 14px;
                 margin-top: 0.15rem;
             }
-        }
-
-        span {
-            margin: 0 0.5rem 0 0.5rem;
         }
     }
 }
